# Sudoku

./: .gitignore  CMakeLists.txt  README.md  main.c  sasolver.c  sudoku.h  sudokuMenu.c
GA/: GA.c  GAconfig.h  GAinterface.c  crossovers.c  crossovers.h  mutations.c  mutations.h  selections.c  selections.h
